# multi_agent_project

./: README.md  turtlebot3_burger_gripper.gazebo.xacro  turtlebot3_burger_gripper.urdf.xacro  turtlebot3_burger_gripper2.gazebo.xacro  turtlebot3_burger_gripper2.urdf.xacro  turtlebot3_burger_scout.gazebo.xacro  turtlebot3_burger_scout.urdf.xacro
multi_agent_avoid/: CMakeLists.txt  package.xml
multi_agent_avoid/include/: avoid_robot.h  fuzzy.h  laser_scan.h  navigation.h
multi_agent_avoid/launch/: run.launch
multi_agent_avoid/src/: main.cpp
multi_agent_avoid/worlds/: turtlebot3_stage_prime.world
multi_agent_cluster/: CMakeLists.txt  package.xml
multi_agent_cluster/include/: cluster_robot.h  cluster_robot2.h  fuzzy.h  laser_scan.h  navigation.h  utility.h
multi_agent_cluster/launch/: gazebo.launch  run.launch
multi_agent_cluster/src/: main.cpp
multi_agent_messages/: CMakeLists.txt  package.xml
multi_agent_messages/msg/: Communication.msg
multi_agent_messages/src/: main.cpp
multi_agent_spec_cluster/: CMakeLists.txt  package.xml
multi_agent_spec_cluster/include/: cluster_robot.h  message.h  navigation.h  object_tracking.h  scout_robot.h  utility.h
multi_agent_spec_cluster/launch/: gazebo.launch  run.launch
multi_agent_spec_cluster/src/: cluster_robot.cpp  scout_robot.cpp
